--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-07-phonebook",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://IvanTolmachev.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://IvanTolmachev.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
     "@emotion/styled": "^11.10.8",
     "@reduxjs/toolkit": "^1.9.5",
@@ -15,6 +15,8 @@
     "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
